--- a/Tests/Data.Test/Data.Test.csproj
+++ b/Tests/Data.Test/Data.Test.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ninject, Version=3.0.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Ninject.3.0.1.10\lib\net40\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.6.2.12296, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
@@ -55,6 +59,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Sources\Data.IoC\Data.IoC.csproj">
+      <Project>{3FCF3E43-6053-4FE6-989F-A32CDADC8986}</Project>
+      <Name>Data.IoC</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Sources\Data.NHibernate\Data.NHibernate.csproj">
       <Project>{2FE64D44-B81A-4702-A594-6BC0130F42FC}</Project>
       <Name>Data.NHibernate</Name>
