Добавлена заготовка для Серверной части

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@
 /Sources/Data.IoC/bin
 /Sources/Data.IoC/obj
 /Sources/Data
+/Sources/Common.Exeptions/bin
+/Sources/Common.Exeptions/obj
+/Sources/Services/bin
+/Sources/Services/obj
