--- a/Sources/Client.Web/packages.config
+++ b/Sources/Client.Web/packages.config
@@ -22,6 +22,7 @@
   <package id="Modernizr" version="2.5.3" targetFramework="net40" />
   <package id="MvcJqGrid" version="1.0.11" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net40" />
+  <package id="Ninject" version="3.0.1.10" targetFramework="net40" />
   <package id="NLog" version="2.0.1.2" targetFramework="net40" />
   <package id="WebGrease" version="1.1.0" targetFramework="net40" />
 </packages>
