--- a/Sources/Data.Test/Data.Test.csproj
+++ b/Sources/Data.Test/Data.Test.csproj
@@ -72,6 +72,10 @@
       <Project>{ABE841B1-6873-4B47-AFC3-4B20600203F8}</Project>
       <Name>Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Common.Data.Core\Common.Data.Core.csproj">
+      <Project>{08A17397-4FFA-407D-8FE2-429A52DBE293}</Project>
+      <Name>Common.Data.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
