--- a/Sources/Client.Web.Test/app.config
+++ b/Sources/Client.Web.Test/app.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+
+
+  <connectionStrings>
+    <add name="DbConnectionString" connectionString="Data Source=R2D3;Initial Catalog=TestPlan;Integrated Security=True" providerName=".NET Framework Data Provider for SQL Server" />
+  </connectionStrings>
+  
+  
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
