--- a/Sources/Client.Web/Client.Web.csproj
+++ b/Sources/Client.Web/Client.Web.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="IoC\ControllersModule.cs" />
     <Compile Include="Models\Controls\Footer\FooterModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -345,6 +346,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Routing\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
