--- a/Sources/Client.Web.Test/packages.config
+++ b/Sources/Client.Web.Test/packages.config
@@ -2,6 +2,11 @@
 <packages>
   <package id="AutoFixture" version="3.2.1" targetFramework="net40" />
   <package id="AutoFixture.AutoRhinoMocks" version="3.2.1" targetFramework="net40" />
+  <package id="MicrosoftWebMvc" version="2.0" targetFramework="net40" />
+  <package id="Mvc2Futures" version="2.0.50217.0" targetFramework="net40" />
+  <package id="MvcContrib" version="2.0.95.0" targetFramework="net40" />
+  <package id="MvcContrib.TestHelper" version="2.0.95.0" targetFramework="net40" />
+  <package id="Ninject" version="3.0.1.10" targetFramework="net40" />
   <package id="NUnit" version="2.6.2" targetFramework="net40" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
 </packages>
