Изменен способ локализации

--- a/Sources/Client.Web/Client.Web.csproj
+++ b/Sources/Client.Web/Client.Web.csproj
@@ -131,6 +131,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionResults\RedirectToLoginResult.cs" />
+    <Compile Include="Attributes\ActionFilters\LocalizeAttribute.cs" />
+    <Compile Include="App_GlobalResources\Views.en-US.Designer.cs">
+      <DependentUpon>Views.en-US.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="App_GlobalResources\Views.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -153,8 +159,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Errors.resx</DependentUpon>
     </Compile>
-    <Compile Include="Extensions\HtmlHelperExtension.cs" />
-    <Compile Include="Extensions\ResourcesHelper.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -380,12 +384,16 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_GlobalResources\Views.resx">
-      <Generator>GlobalResourceProxyGenerator</Generator>
+    <EmbeddedResource Include="App_GlobalResources\Views.en-US.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Views.en-US.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="App_GlobalResources\Views.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Views.designer.cs</LastGenOutput>
-    </Content>
+    </EmbeddedResource>
     <EmbeddedResource Include="App_GlobalResources\Errors.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Errors.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
